# Honeywell_N3680_BarCode

Include/: AsyncParser.h  CommLib.rc2  Customize.h  DataParse.h  DeviceComm.h  DeviceConfig.h  DeviceFirmware.h  FirmwareReplace.h  FontHelper.h  Functor.h  GraphicsMagick.h  HModem.h  HsmComm.h  HsmErrorDefs.h  HsmErrorDefsFW.h  HsmFirmwareReplace.h  HsmHelpers.h  HsmProgress.h  ImageFifo.h  ImageFormats.h  ImageHandler.h  MessageDetails.h  PortEvents.h  StringFifo.h  ThreadedDeviceCommands.h  ValidateDevice.h  ValidateFirmware.h  stdafx.h  svn_rev.h  timeout.h  wchar_overloads.h  xmodem.h
Include/Android/: AndroidCdcAcm.h  AndroidHidPos.h  AndroidUsbBase.h  AndroidUsbManager.h  CommLib.h  Fifo.h  GetTickCount.h  PortFunctor.h  ThreadWorker.h  TransmitFirmware.h  android_stdafx.h  logs.h  syncobjects.h  timeout.h  winerror.h
Include/Linux/: GetTickCount.h
Include/Windows/: AboutDlg.h  AutoSaveCombo.h  BitmapCtrl.h  CommLib.h  CommonResources.rc2  DeviceTracer.h  DialogHelpers.h  EnumerateCodepages.h  GuiHelpers.h  HsmResources.h  HsmResources.rc2  IDCombo.h  ResizableDialog.h  RichEditExtentions.h  RightClickButton.h  ThreadWorker.h  TransmitFirmware.h  ddxfile.h  versionhlp.h  win_stdafx.h
Libraries/hedc_android/: gradle.properties  settings.gradle
Libraries/hedc_android/ScanBarCode/: build.gradle
Libraries/hedc_android/hedc/: CMakeLists.txt  build.gradle
Libraries/hedc_android/hedc/src/androidTest/java/honeywell/hedc/: ExampleInstrumentedTest.java
Libraries/hedc_android/hedc/src/main/: AndroidManifest.xml
Libraries/hedc_android/hedc/src/main/cpp/: JniInterface.cpp  JniInterface.h
Libraries/hedc_android/hedc/src/main/java/honeywell/hedc/: Constants.java  EngineCommunication.java  GuiHelpers.java  HsmCompatActivity.java  SymbologyConfig.java
Libraries/hedc_android/hedc/src/main/res/values/: errors.xml  events.xml  strings.xml  svn_rev.xml
Libraries/hedc_android/hedc/src/test/java/honeywell/hedc/: ExampleUnitTest.java
Libraries/hedc_android/hedc_usb_com/: build.gradle  readme.txt
Libraries/libHsmComm/: AsyncParser.cpp  DataParse.cpp  DeviceComm.cpp  HModem.cpp  ImageFifo.cpp  ImageFormats.cpp  ImageHandler.cpp  MessageDetails.cpp  StringFifo.cpp
Libraries/libHsmComm/Android/: AndroidCdcAcm.cpp  AndroidHidPos.cpp  AndroidUsbBase.cpp  AndroidUsbManager.cpp  CMakeLists.txt  CommLib.cpp  Fifo.cpp  GetTickCount.cpp  syncobjects.cpp
Libraries/libHsmComm/Linux/: GetTickCount.cpp
Libraries/libHsmComm/Windows/: CommLib.cpp  MFCInit.cpp  getopt.c  libHsmComm.vcxproj  libHsmComm.vcxproj.filters
Libraries/libHsmFirmwareReplace/: DeviceConfig.cpp  DeviceFirmware.cpp  ErrorText.cpp  FirmwareReplace.cpp  ThreadedDeviceCommands.cpp  ValidateDevice.cpp  ValidateFirmware.cpp  crc16.cpp  crc16.h  memmem.cpp  memmem.h  xmodem.cpp
Libraries/libHsmFirmwareReplace/Android/: CMakeLists.txt  TransmitFirmware.cpp
Libraries/libHsmFirmwareReplace/Linux/: TransmitFirmware.cpp  TransmitFirmware.h
Libraries/libHsmFirmwareReplace/Windows/: DeviceTracer.cpp  (+3 more)
(+12 files in other folders)
